ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Is_this_a_Photocopy__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_Photocopy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is this a Photocopy ?</label>
    <type>Checkbox</type>
</CustomField>