ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/isBackDocReplaced__c.field-meta.xml
<CustomField>
    <fullName>isBackDocReplaced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isBackDocReplaced</label>
    <type>Checkbox</type>
</CustomField>