ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/isFrontDocReplaced__c.field-meta.xml
<CustomField>
    <fullName>isFrontDocReplaced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isFrontDocReplaced</label>
    <type>Checkbox</type>
</CustomField>