ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/isUploadedOnRepaymentScreen__c.field-meta.xml
<CustomField>
    <fullName>isUploadedOnRepaymentScreen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isUploadedOnRepaymentScreen</label>
    <type>Checkbox</type>
</CustomField>