ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/KYC_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>KYC_Address_Line_1__c</fullName>
    <label>KYC Address Line 1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>