ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/KYC_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>KYC_Address_Line_2__c</fullName>
    <label>KYC Address Line 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>