ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/KYC_City__c.field-meta.xml
<CustomField>
    <fullName>KYC_City__c</fullName>
    <label>KYC City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>