ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/KYC_District__c.field-meta.xml
<CustomField>
    <fullName>KYC_District__c</fullName>
    <label>KYC District</label>
    <length>255</length>
    <type>Text</type>
</CustomField>