ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/KYC_DOB__c.field-meta.xml
<CustomField>
    <fullName>KYC_DOB__c</fullName>
    <label>KYC DOB</label>
    <type>Date</type>
</CustomField>