ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/KYC_Document_Number__c.field-meta.xml
<CustomField>
    <fullName>KYC_Document_Number__c</fullName>
    <formula>If(ISPICKVAL(Document_Type__c, &apos;GST Certificate&apos;), (IF( (GST_No__c != null),GST_No__c, Document_Number__c)),IF(ISPICKVAL(Document_Type__c, &apos;CIN&apos;),(IF( (CIN_No__c != null),CIN_No__c, Document_Number__c)), Document_Number__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KYC Document Number</label>
    <type>Text</type>
</CustomField>