ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/KYC_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>KYC_Expiry_Date__c</fullName>
    <label>KYC Expiry Date</label>
    <type>Date</type>
</CustomField>