ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/KYC_Issuance_Date__c.field-meta.xml
<CustomField>
    <fullName>KYC_Issuance_Date__c</fullName>
    <label>KYC Issuance Date</label>
    <type>Date</type>
</CustomField>