ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/KYC_name__c.field-meta.xml
<CustomField>
    <fullName>KYC_name__c</fullName>
    <label>KYC name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>