ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/KYC_No__c.field-meta.xml
<CustomField>
    <fullName>KYC_No__c</fullName>
    <label>KYC No.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>