ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/KYC_Pin_Code__c.field-meta.xml
<CustomField>
    <fullName>KYC_Pin_Code__c</fullName>
    <label>KYC Pin Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>