ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/KYC_State__c.field-meta.xml
<CustomField>
    <fullName>KYC_State__c</fullName>
    <label>KYC State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>