ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Landmark__c.field-meta.xml
<CustomField>
    <fullName>Landmark__c</fullName>
    <label>Landmark</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>