ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Loan_applicarion_ID__c.field-meta.xml
<CustomField>
    <fullName>Loan_applicarion_ID__c</fullName>
    <description>This Field was created for CMU User display</description>
    <formula>Opportunity_Relation__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Applicarion ID</label>
    <type>Text</type>
</CustomField>