ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Marital_status__c.field-meta.xml
<CustomField>
    <fullName>Marital_status__c</fullName>
    <description>This field was created for CMU User</description>
    <formula>Text(Applicant__r.Marital_status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marital status</label>
    <type>Text</type>
</CustomField>