ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Masked_KYC_No__c.field-meta.xml
<CustomField>
    <fullName>Masked_KYC_No__c</fullName>
    <description>Storing Aadhaar No in masked format</description>
    <label>KYC No.</label>
    <length>30</length>
    <type>Text</type>
</CustomField>