ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Mother_s_name__c.field-meta.xml
<CustomField>
    <fullName>Mother_s_name__c</fullName>
    <description>this field was created for CMU user</description>
    <formula>Applicant__r.Mother_s_name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mother&apos;s name</label>
    <type>Text</type>
</CustomField>