ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Name_Mismatch_Pass__c.field-meta.xml
<CustomField>
    <fullName>Name_Mismatch_Pass__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Name Mismatch Pass</label>
    <type>Checkbox</type>
</CustomField>