ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Name_Mismatch_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Name_Mismatch_Percentage__c</fullName>
    <label>Name Match Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>