ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Name_of_Beneficial_Owners__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Beneficial_Owners__c</fullName>
    <label>Name of Beneficial Owners</label>
    <length>255</length>
    <type>Text</type>
</CustomField>