ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Name_of_Borrower_account_holder__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Borrower_account_holder__c</fullName>
    <label>Name of account holder</label>
    <length>50</length>
    <type>Text</type>
</CustomField>