ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Names_Of_Person_Authorized__c.field-meta.xml
<CustomField>
    <fullName>Names_Of_Person_Authorized__c</fullName>
    <label>Names Of Person Authorized Signing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>