ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/NCM_Comment__c.field-meta.xml
<CustomField>
    <fullName>NCM_Comment__c</fullName>
    <label>NCM Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>