ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/NCM_Status__c.field-meta.xml
<CustomField>
    <fullName>NCM_Status__c</fullName>
    <label>NCM Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>ReInitiated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>