ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/No_of_Relations__c.field-meta.xml
<CustomField>
    <fullName>No_of_Relations__c</fullName>
    <label>No of Relations</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>