ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/NOC_ref_no_as_per_journey__c.field-meta.xml
<CustomField>
    <fullName>NOC_ref_no_as_per_journey__c</fullName>
    <label>NOC ref. no. as per journey</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>