ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/NSDL_Response__c.field-meta.xml
<CustomField>
    <fullName>NSDL_Response__c</fullName>
    <label>NSDL Response</label>
    <length>72</length>
    <type>Text</type>
</CustomField>