ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/NSDLNameMatch__c.field-meta.xml
<CustomField>
    <fullName>NSDLNameMatch__c</fullName>
    <label>NSDLNameMatch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>