ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/NSDLPANName__c.field-meta.xml
<CustomField>
    <fullName>NSDLPANName__c</fullName>
    <label>NSDLPANName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>