ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/NSDLPANStatus__c.field-meta.xml
<CustomField>
    <fullName>NSDLPANStatus__c</fullName>
    <label>NSDLPANStatus</label>
    <length>50</length>
    <type>Text</type>
</CustomField>