ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Number_of_persons_involved_in_the_transa__c.field-meta.xml
<CustomField>
    <fullName>Number_of_persons_involved_in_the_transa__c</fullName>
    <label>Number of persons involved in the transa</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>