ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Opportunity_Relation__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Relation__c</fullName>
    <label>Loan Application</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>