ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Original_Copy__c.field-meta.xml
<CustomField>
    <fullName>Original_Copy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Original Copy</label>
    <type>Checkbox</type>
</CustomField>