ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Original_Verified__c.field-meta.xml
<CustomField>
    <fullName>Original_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Original Verified</label>
    <type>Checkbox</type>
</CustomField>