ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/OTP_for_borrower__c.field-meta.xml
<CustomField>
    <fullName>OTP_for_borrower__c</fullName>
    <label>OTP for borrower</label>
    <length>5</length>
    <type>Text</type>
</CustomField>