ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/OTP_Resend_Attempts__c.field-meta.xml
<CustomField>
    <fullName>OTP_Resend_Attempts__c</fullName>
    <defaultValue>0</defaultValue>
    <label>OTP Resend Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>