ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/PAN_acknowledgement_number__c.field-meta.xml
<CustomField>
    <fullName>PAN_acknowledgement_number__c</fullName>
    <label>PAN acknowledgement number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>