ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Pan_Approved__c.field-meta.xml
<CustomField>
    <fullName>Pan_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pan Approved</label>
    <type>Checkbox</type>
</CustomField>