ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Passbook_Remarks_for_CoBorrower__c.field-meta.xml
<CustomField>
    <fullName>Passbook_Remarks_for_CoBorrower__c</fullName>
    <label>Remarks</label>
    <type>TextArea</type>
</CustomField>