ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Passport_File_No__c.field-meta.xml
<CustomField>
    <fullName>Passport_File_No__c</fullName>
    <label>Passport File No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>