ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Passport_No__c.field-meta.xml
<CustomField>
    <fullName>Passport_No__c</fullName>
    <label>Passport No</label>
    <length>30</length>
    <type>Text</type>
</CustomField>