ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Payment_amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_amount__c</fullName>
    <label>Payment amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>