ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Payment_made_to__c.field-meta.xml
<CustomField>
    <fullName>Payment_made_to__c</fullName>
    <label>Payment made to</label>
    <length>50</length>
    <type>Text</type>
</CustomField>