ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Payment_receipt_date__c.field-meta.xml
<CustomField>
    <fullName>Payment_receipt_date__c</fullName>
    <label>Payment receipt date</label>
    <type>Date</type>
</CustomField>