ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Payment_receipt_no__c.field-meta.xml
<CustomField>
    <fullName>Payment_receipt_no__c</fullName>
    <label>Payment receipt no</label>
    <length>25</length>
    <type>Text</type>
</CustomField>