ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Payment_Receipt_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Payment_Receipt_Remarks__c</fullName>
    <label>Remarks</label>
    <type>TextArea</type>
</CustomField>