ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Permanent_Residential_Address_Proof__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Residential_Address_Proof__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Permanent Residential Address Proof</label>
    <type>Checkbox</type>
</CustomField>