ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Pin_code_CR__c.field-meta.xml
<CustomField>
    <fullName>Pin_code_CR__c</fullName>
    <label>Pin code</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>