ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Place_of_Issuance__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Issuance__c</fullName>
    <label>Place of Issuance</label>
    <length>80</length>
    <type>Text</type>
</CustomField>