ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Pre_Initial_Address__c.field-meta.xml
<CustomField>
    <fullName>Pre_Initial_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is to identify whether this document is created to capture the address which is filled on D2C app in pre initial offer journey.</description>
    <label>Pre Initial Address</label>
    <type>Checkbox</type>
</CustomField>