ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Proof_of_Address_POA__c.field-meta.xml
<CustomField>
    <fullName>Proof_of_Address_POA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proof of Address (POA)</label>
    <type>Checkbox</type>
</CustomField>