ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Proof_of_Identity_POI__c.field-meta.xml
<CustomField>
    <fullName>Proof_of_Identity_POI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proof of Identity (POI)</label>
    <type>Checkbox</type>
</CustomField>