ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Raw_Response__c.field-meta.xml
<CustomField>
    <fullName>Raw_Response__c</fullName>
    <label>Raw Response</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>