ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Raw_Response_for_Selfie_Report__c.field-meta.xml
<CustomField>
    <fullName>Raw_Response_for_Selfie_Report__c</fullName>
    <label>Raw Response for Selfie Report</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>