ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/RC_Owner__c.field-meta.xml
<CustomField>
    <fullName>RC_Owner__c</fullName>
    <description>Additional Doc - RC</description>
    <label>RC in the Name of?</label>
    <type>TextArea</type>
</CustomField>