ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/RCU_Agency_Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>RCU_Agency_Verification_Status__c</fullName>
    <label>RCU Agency Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Initiated</fullName>
            </value>
            <value>
                <fullName>Screened</fullName>
            </value>
            <value>
                <fullName>Sampled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>