ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/RCU_Agency_Verification_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>RCU_Agency_Verification_Sub_Status__c</fullName>
    <label>RCU Agency Verification Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>RCU_Agency_Verification_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Non-clear Profile</fullName>
            </value>
            <value>
                <fullName>Refer to Credit</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Clear</fullName>
            </value>
            <value>
                <fullName>Pending for RCU Verification</fullName>
            </value>
            <value>
                <fullName>Non-clear Document</fullName>
            </value>
            <value>
                <fullName>Pending for resident/office Profiling</fullName>
                <isActive>false</isActive>
                <label>Pending for resident/office Profiling</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>