ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/RCU_Case__c.field-meta.xml
<CustomField>
    <fullName>RCU_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Document</relationshipLabel>
    <relationshipName>Documents1</relationshipName>
    <type>Lookup</type>
</CustomField>