ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/RCU_Document_Remarks__c.field-meta.xml
<CustomField>
    <fullName>RCU_Document_Remarks__c</fullName>
    <label>Remarks</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>