ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Re_KYC__c.field-meta.xml
<CustomField>
    <fullName>Re_KYC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Re-KYC</label>
    <type>Checkbox</type>
</CustomField>