ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Reinitiation_Count__c.field-meta.xml
<CustomField>
    <fullName>Reinitiation_Count__c</fullName>
    <label>Reinitiation Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>