ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Reject_Count__c.field-meta.xml
<CustomField>
    <fullName>Reject_Count__c</fullName>
    <label>Reject Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>