ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Rejected_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Rejected_DateTime__c</fullName>
    <label>Rejected DateTime</label>
    <type>DateTime</type>
</CustomField>