ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Rejection_Fields__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Fields__c</fullName>
    <label>Rejection Fields</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>CMU_Accept_Reject__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Kyc_Fields</valueSetName>
    </valueSet>
</CustomField>