ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Remarks_for_foreclosure_letter__c.field-meta.xml
<CustomField>
    <fullName>Remarks_for_foreclosure_letter__c</fullName>
    <label>Remarks</label>
    <type>TextArea</type>
</CustomField>