ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Repayment__c.field-meta.xml
<CustomField>
    <fullName>Repayment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Repayment</label>
    <referenceTo>Repayments__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>