ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Request_Ext_Body__c.field-meta.xml
<CustomField>
    <fullName>Request_Ext_Body__c</fullName>
    <label>Request Ext Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>