ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Reupload_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Reupload_DateTime__c</fullName>
    <label>Reupload DateTime</label>
    <type>DateTime</type>
</CustomField>