ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/SCM_Comment__c.field-meta.xml
<CustomField>
    <fullName>SCM_Comment__c</fullName>
    <label>SCM Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>