ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Selfie_report_Pass__c.field-meta.xml
<CustomField>
    <fullName>Selfie_report_Pass__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Selfie report Pass</label>
    <type>Checkbox</type>
</CustomField>