ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Signature_Verification_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Signature_Verification_Bank_Name__c</fullName>
    <label>Signature Verification Bank Name</label>
    <type>TextArea</type>
</CustomField>