ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Signature_verification_for__c.field-meta.xml
<CustomField>
    <fullName>Signature_verification_for__c</fullName>
    <label>Signature verification for</label>
    <length>255</length>
    <type>Text</type>
</CustomField>