ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Spouse_Name__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Name__c</fullName>
    <description>This field was created for CMU user Only.</description>
    <formula>Applicant__r.Spouse_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spouse Name</label>
    <type>Text</type>
</CustomField>