ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Submit_to_CMU__c.field-meta.xml
<CustomField>
    <fullName>Submit_to_CMU__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submit to CMU</label>
    <type>Checkbox</type>
</CustomField>