ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Taluka_Id__c.field-meta.xml
<CustomField>
    <fullName>Taluka_Id__c</fullName>
    <label>Taluka_Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>