ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/recordTypes/Asset_Verification_Documents.recordType-meta.xml
<RecordType>
    <fullName>Asset_Verification_Documents</fullName>
    <active>true</active>
    <label>Asset Verification Documents</label>
</RecordType>