ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/recordTypes/DSA_Documents.recordType-meta.xml
<RecordType>
    <fullName>DSA_Documents</fullName>
    <active>true</active>
    <description>This record type store information related to DSA</description>
    <label>DSA Documents</label>
</RecordType>