ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/recordTypes/KYC.recordType-meta.xml
<RecordType>
    <fullName>KYC</fullName>
    <active>true</active>
    <label>KYC Document</label>
</RecordType>