ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/recordTypes/Other_Documents.recordType-meta.xml
<RecordType>
    <fullName>Other_Documents</fullName>
    <active>true</active>
    <label>Other Documents</label>
</RecordType>